update: anonymize clients and refine bio

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">🤖</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">Automatisme & Robotique</h4>
-                            <p class="sector-clients">ENCHANTED TOOLS, PERCIPIO ROBOTICS, ACTEMIUM...</p>
+                            <p class="sector-clients">Startups, PME & ETI innovantes</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all">8
                                 clients</span>
@@ -301,7 +301,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">🏭</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">Industrie & Énergie</h4>
-                            <p class="sector-clients">ELECTROLUX, FIVES CRYO, JOHN COCKERILL, JEUMONT...</p>
+                            <p class="sector-clients">Grands Groupes & ETI</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all">4
                                 clients</span>
@@ -312,7 +312,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">⚙️</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">Machines & Équipements</h4>
-                            <p class="sector-clients">AMADA EUROPE, ASPIR ELEC, HOLWEG, SUPERBA...</p>
+                            <p class="sector-clients">Fabricants de Machines & Lignes de Production</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all animate-pulse-glow">40+
                                 clients</span>
@@ -323,7 +323,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">🚆</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">Transport & Mobilité</h4>
-                            <p class="sector-clients">HANDYNAMIC, PANDROL, SECMA...</p>
+                            <p class="sector-clients">Acteurs majeurs du secteur</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all">3
                                 clients</span>
@@ -334,7 +334,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">🔧</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">Métallurgie & Traitement</h4>
-                            <p class="sector-clients">AALBERTS, METAL DEPLOYE, KERMEL...</p>
+                            <p class="sector-clients">Industriels de la transformation</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all">3
                                 clients</span>
@@ -345,7 +345,7 @@
                         <span class="sector-icon text-4xl group-hover:animate-bounce-subtle">🌍</span>
                         <div class="sector-info">
                             <h4 class="group-hover:text-[#2f6e9b] transition-colors">International</h4>
-                            <p class="sector-clients">VISIATIV AFRICA - NEXANS, SULO DEUTSCHLAND...</p>
+                            <p class="sector-clients">VISIATIV AFRICA - Projets Multi-sites</p>
                             <span
                                 class="sector-count inline-block px-3 py-1 rounded-full text-xs font-semibold bg-gradient-to-r from-[#2f6e9b]/20 to-[#6b8caf]/20 group-hover:from-[#2f6e9b]/40 group-hover:to-[#6b8caf]/40 transition-all">2
                                 clients</span>
@@ -368,7 +368,7 @@
                                 class="project-type px-2 py-0.5 text-xs font-medium rounded bg-[#2f6e9b]/10 text-[#2f6e9b]">
                                 Robotique</div>
                         </div>
-                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">ENCHANTED TOOLS</h5>
+                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">ROBOTIQUE HUMANOÏDE</h5>
                         <p class="project-subtitle relative z-10">Robot ORBITA</p>
                         <p class="project-desc relative z-10">Assemblages mécaniques complexes avec 28+ composants
                             SOLIDWORKS,
@@ -395,7 +395,8 @@
                                 class="project-type px-2 py-0.5 text-xs font-medium rounded bg-[#2f6e9b]/10 text-[#6b8caf]">
                                 Déploiement</div>
                         </div>
-                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">ASPIR ELEC</h5>
+                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">SYSTÈMES D'ASPIRATION
+                        </h5>
                         <p class="project-subtitle relative z-10">Installation complète</p>
                         <p class="project-desc relative z-10">DTE détaillé, 6 templates personnalisés (.prtdot, .asmdot,
                             .drwdot),
@@ -421,7 +422,8 @@
                                 class="project-type px-2 py-0.5 text-xs font-medium rounded bg-emerald-500/10 text-emerald-600">
                                 Migration</div>
                         </div>
-                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">WEBER Industries</h5>
+                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">MÉCANIQUE INDUSTRIELLE
+                        </h5>
                         <p class="project-subtitle relative z-10">Migration & Upgrade</p>
                         <p class="project-desc relative z-10">Migration complète avec upgrade serveur, reconfiguration
                             workflows,
@@ -447,7 +449,7 @@
                                 class="project-type px-2 py-0.5 text-xs font-medium rounded bg-violet-500/10 text-violet-600">
                                 International</div>
                         </div>
-                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">NEXANS Africa</h5>
+                        <h5 class="relative z-10 group-hover:text-[#2f6e9b] transition-colors">CÂBLAGE MONDIAL</h5>
                         <p class="project-subtitle relative z-10">Visiativ Africa</p>
                         <p class="project-desc relative z-10">Migration PDM pour le géant mondial des câbles,
                             coordination
@@ -466,7 +468,7 @@
                             <span class="project-icon">🚆</span>
                             <div class="project-type">Transport</div>
                         </div>
-                        <h5>FLOWBIRD</h5>
+                        <h5>SOLUTIONS DE MOBILITÉ</h5>
                         <p class="project-subtitle">RATP - Retrofit distributeurs</p>
                         <p class="project-desc">Conception mécanique, revues de design, calculs de structure Creo
                             Simulate, intégration PLM</p>
@@ -481,7 +483,7 @@
                             <span class="project-icon">📡</span>
                             <div class="project-type">Défense</div>
                         </div>
-                        <h5>IDEMIA</h5>
+                        <h5>SÉCURITÉ & DÉFENSE</h5>
                         <p class="project-subtitle">Développement radars</p>
                         <p class="project-desc">Conception de nouveaux radars, pièces usinées, structuration
                             architecture dossier PLM</p>
@@ -522,9 +524,9 @@
                 </div>
                 <div class="about-text">
                     <p class="highlight-hover" data-translate-key="about_p1">
-                        <strong>Ingénieur Mécanique INSA</strong> de formation, j'ai transformé mon expertise
-                        technique en une spécialisation pointue sur les systèmes <strong>PDM/PLM</strong>. Je ne me
-                        contente pas d'installer des logiciels : je conçois des architectures de données pérennes.
+                        <strong>Ingénieur Plasturgie INSA</strong> de formation, j'ai évolué de la conception mécanique
+                        pure vers l'architecture des systèmes d'information techniques. Mon approche est pragmatique :
+                        la technique doit servir le métier, et non le contraindre.
                     </p>
                     <p class="highlight-hover" data-translate-key="about_p2">
                         Avec plus de <strong>69 projets réussis</strong> (migrations complexes, déploiements
