update: plastic engineer bio and English translations

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         })(window, document, 'script', 'dataLayer', 'GTM-PBLRK58T');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohamed Omar Baouch | Ingénieur & Consultant PDM/PLM</title>
+    <title>Mohamed Omar Baouch | Ingénieur Plasturgie & Consultant PDM/PLM</title>
     <meta name="description"
-        content="Portfolio de Mohamed Omar Baouch - Ingénieur mécanique et consultant PDM/PLM spécialisé dans l'optimisation des processus de développement produit">
+        content="Portfolio de Mohamed Omar Baouch - Ingénieur Plasturgie et consultant PDM/PLM spécialisé dans l'optimisation des processus de développement produit">
     <meta name="keywords"
-        content="PDM, PLM, SolidWorks, ingénieur mécanique, consultant, VISIATIV, gestion du cycle de vie produit">
+        content="PDM, PLM, SolidWorks, ingénieur plasturgie, consultant, VISIATIV, gestion du cycle de vie produit">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -722,9 +722,9 @@
                             style="background: var(--accent-secondary)" data-translate-key="exp2_date">Sept 2021 - Juin
                             2023</span>
                         <h3 class="text-2xl font-bold mb-2" style="color: var(--text-primary)"
-                            data-translate-key="exp2_title">Ingénieur Mécanique & PLM Lead</h3>
-                        <p class="text-lg font-semibold mb-4" style="color: var(--accent-secondary)">ABMI / IDEMIA /
-                            FLOWBIRD</p>
+                            data-translate-key="exp2_title">Ingénieur Plasturgie & PLM Lead</h3>
+                        <p class="text-lg font-semibold mb-4" style="color: var(--accent-secondary)">ABMI / SECTEURS
+                            VARIES</p>
                     </div>
 
                     <!-- Content Left (reversed) -->
@@ -734,13 +734,13 @@
                             style="background: color-mix(in srgb, var(--bg-secondary) 50%, transparent); border: 1px solid color-mix(in srgb, var(--accent-secondary) 20%, transparent)">
                             <div class="mb-4">
                                 <p class="font-semibold mb-2" style="color: var(--accent-primary)"
-                                    data-translate-key="exp2_subtitle1">IDEMIA (Défense & Sécurité)</p>
+                                    data-translate-key="exp2_subtitle1">ACTEUR DÉFENSE & SÉCURITÉ</p>
                                 <p class="text-sm" style="color: var(--text-secondary)" data-translate-key="exp2_li1">
                                     Conception de radars nouvelle génération</p>
                             </div>
                             <div>
                                 <p class="font-semibold mb-2" style="color: var(--accent-primary)"
-                                    data-translate-key="exp2_subtitle2">FLOWBIRD (Transport)</p>
+                                    data-translate-key="exp2_subtitle2">ACTEUR DU TRANSPORT & MOBILITÉ</p>
                                 <p class="text-sm" style="color: var(--text-secondary)" data-translate-key="exp2_li3">
                                     Retrofit RATP - Gestion ECR/ECO</p>
                             </div>
